fix alignment issue with image tiles next to non image tiles

--- a/_sass/jekyll-theme-haymarket.scss
+++ b/_sass/jekyll-theme-haymarket.scss
@@ -935,7 +935,7 @@ a,
   }
 
   .tile-container-text {
-    height: 3rem;
+    height: 3.25rem;
 
     .color-background {
       background-color: $dsa-purple;
